Design of the news part

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Google</title>
+    <title>Thanos - Buscar con Google</title>
+    <link rel="shortcut icon" type="image/png" href="/images/ico.png"/>
     <link rel="stylesheet" href="/css/app.css">
 </head>
 
@@ -19,7 +20,7 @@
                 <div class="content-search">
                     <input type="text">
                     <img src="/images/googlemic_color_24dp.png" class="mic" alt="mic">
-                   <img src="/images/search.jpg" alt="search">
+                    <img src="/images/search.jpg" alt="search">
                 </div>
             </div>
             <div class="content-menu-user">
@@ -44,7 +45,200 @@
             </ul>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="max-width">
+            <div class="header-main">
+                <p>Cerca de <span>123,000,000</span> resultados (<span>0.37</span> segundos)</p>
+            </div>
+            <div class="content-main">
+                <div class="column-1">
+                    <div class="news">
+                        <div class="title">
+                            <h2>Noticias destacadas</h2>
+                        </div>
+                        <div class="banner">
+                            <div class="btn back">
+                                <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
+                                </svg>
+                            </div>
+                            <div class="animation">
+                                <div class="section">
+                                    <div class="news-box">
+                                        <div class="box-img">
+                                            <img src="/images/thanos-1.jpg" alt="">
+                                        </div>
+                                        <div class="description">
+                                            <h4>Thano, el villano de Avengers, llegó al buscador de Google y ycon su
+                                                guante mágico</h4>
+                                            <span class="link">Infobae</span>
+                                            <span class="hours">hace 9 horas</span>
+                                        </div>
+                                    </div>
+                                    <div class="news-box">
+                                        <div class="box-img">
+                                            <img src="/images/thanos-1.jpg" alt="">
+                                        </div>
+                                        <div class="description">
+                                            <h4>Thano, el villano de Avengers, llegó al buscador de Google y ycon su
+                                                guante mágico</h4>
+                                            <span class="link">Infobae</span>
+                                            <span class="hours">hace 9 horas</span>
+                                        </div>
+                                    </div>
+                                    <div class="news-box">
+                                        <div class="box-img">
+                                            <img src="/images/thanos-1.jpg" alt="">
+                                        </div>
+                                        <div class="description">
+                                            <h4>Thano, el villano de Avengers, llegó al buscador de Google y ycon su
+                                                guante mágico</h4>
+                                            <span class="link">Infobae</span>
+                                            <span class="hours">hace 9 horas</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="btn next">
+                                <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="more">
+                        <span class="row">
+                            <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"></path>
+                            </svg>
+                        </span>
+                        <span>Más sobre thanos</span>
+                    </div>
+                    <div class="content-data">
+                        <div class="item">
+                            <h4>Thanos - Wikipedia, la enciclopedia libre</h4>
+                            <div class="link">
+                                <span>https://es.wikipedia.org/Thanos</span>
+                                <img src="/images/row-dowm.jpg" alt="">
+                            </div>
+                            <p><b>Thanos</b> es un supervillano ficticio que aparece en los cómics norteamericanos
+                                publicados
+                                por Marvel Comics. Creado por el escritor y artista Jim Starlin el ...</p>
+                            <div class="section">
+                                <div class="op">
+                                    <b>Creador(es): </b>
+                                    <a>Jim Starlin</a>
+                                </div>
+                                <div class="op">
+                                    <b>Primera aparición: </b>
+                                    <span>Iron Man Vol. 1, #55 (febrero)</span>
+                                </div>
+                            </div>
+                            <div class="section">
+                                <div class="op">
+                                    <b>Interpretado por: </b>
+                                    <span>Damion Poitier (2012)</span>
+                                    <a>Josh</a>
+                                </div>
+                                <div class="op">
+                                    <b>Nombre original: </b>
+                                    <span>Thanos The Titan, Dione</span>
+                                </div>
+                            </div>
+                            <div class="tags">
+                                <a>Muerte</a>
+                                <span>•</span>
+                                <a>Starfox</a>
+                                <span>•</span>
+                                <a>Titan</a>
+                                <span>•</span>
+                                <a>Drax el Destructor</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <h4>'Vengadores: Endgame': ¿Quién ha matado a Thanos en los cómics y ...</h4>
+                            <div class="link">
+                                <span>https://www.esquire.com/es/actualidad/cine/.../quien-mata-thanos-vengadores-4/</span>
+                                <img src="/images/row-dowm.jpg" alt="">
+                            </div>
+                            <p>Cómo muere <b>Thanos?</b> ¿Quién tiene más motivos para acabar con el Titán Loco?</p>
+                        </div>
+                        <div class="item">
+                            <h4>El guante de Thanos está inspirado en una santa: la Arquidiócesis de ...</h4>
+                            <div class="link">
+                                <span>https://www.infobae.com/.../el-guante-de-thanos-esta-inspirado-en-una-santa-la-arquid...</span>
+                                <img src="/images/row-dowm.jpg" alt="">
+                            </div>
+                            <p>hace 7 horas - Tanto así que incluso la iglesia católica compartió un video en redes
+                                sociales en donde diferenció el guantelete del titán <b>Thanos</b> con una ...</p>
+                        </div>
+                        <div class="item">
+                            <h4>Historia de Thanos en Marvel - Smash Mexico</h4>
+                            <div class="link">
+                                <span>https://www.smashmexico.com.mx/marvelc/historia-de-thanos-en-marvel/</span>
+                                <img src="/images/row-dowm.jpg" alt="">
+                            </div>
+                            <p>Más de una vez, <b>Thanos</b> tomó a un niño de una especie galáctica que había diezmado
+                                para criarlos como propios. Algunos de estos niños han sido tutelados ...</p>
+                        </div>
+                        <div class="item">
+                            <h4>Thanos | Marvel Cinematic Universe Wiki | FANDOM powered by Wikia</h4>
+                            <div class="link">
+                                <span>https://marvelcinematicuniverse.fandom.com/es/wiki/Thanos</span>
+                                <img src="/images/row-dowm.jpg" alt="">
+                            </div>
+                            <p><b>Thanos</b>, también conocido como Señor Oscuro por sus más fieles subordinados y
+                                apodado como Titán Loco por las comunidades galácticas, fue un señor de la ...</p>
+                        </div>
+                        <div class="item">
+                            <h4>Google y su tributo a Thanos | CNN</h4>
+                            <div class="link">
+                                <span>https://cnnespanol.cnn.com/.../estados-unidos-advanteger-thanos-google-truco-perspecti...</span>
+                                <img src="/images/row-dowm.jpg" alt="">
+                            </div>
+                            <div class="video">
+                                <div class="box-img-video">
+                                    <img src="/images/video.jpg" alt="">
+                                    <div class="play">▶</div>
+                                </div>
+                                <div class="info">
+                                    <span>hace 1 día</span>
+                                    <p>Google decidió incluir en su plataforma una animación interactiva con el
+                                        personaje <b>Thanos</b>. Si realizan la ...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <h4>¿Cómo?: Según la iglesia de México, el guantelete de Thanos está ...</h4>
+                            <div class="link">
+                                <span>https://www.fayerwayer.com/2019/04/iglesia-thanos-guantelete/</span>
+                                <img src="/images/row-dowm.jpg" alt="">
+                            </div>
+                            <p>hace 10 horas - Suena a broma decir que el guantelete de <b>Thanos</b> es una reliquia católica, aunque en realidad sí se parece. Esto es lo que dice la iglesia ...</p>
+                        </div>
+                        <div class="item">
+                            <h4>¡Conoce al poderoso y terrible Thanos, el Titán Loco ...</h4>
+                            <div class="link">
+                                <span>https://www.superaficionados.com › Cómics</span>
+                                <img src="/images/row-dowm.jpg" alt="">
+                            </div>
+                            <p>Tras Avengers: Infinity War s (2018) y con la próxima Avengers: Endgame (2019) a la vuelta de la esquina, <b>Thanos</b> está en boca de todo el mundo por ser el...</p>
+                        </div>
+                        <div class="item">
+                            <h4>¿Es católico el guante de Thanos? - El Universal</h4>
+                            <div class="link">
+                                <span>https://www.eluniversal.com.mx/nacion/es-catolico-el-guante-de-thanos</span>
+                                <img src="/images/row-dowm.jpg" alt="">
+                            </div>
+                            <p>hace 2 horas - Tras el estreno de “Avengers: Endgame”, la Arquidiócesis de Monterrey se preguntó si el guante de <b>Thanos</b> es católico, por lo que se dio a la ...</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="column-2"></div>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 
