--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" co ntent="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Thanos - Buscar con Google</title>
-    <link rel="shortcut icon" type="image/png" href="/images/ico.png" />
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="shortcut icon" type="image/png" href="images/ico.png" />
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
     <header>
         <div class="search">
             <div class="box-logo">
-                <img src="/images/google-logo.png" alt="">
+                <img src="images/google-logo.png" alt="">
             </div>
             <div class="box-search">
                 <div class="content-search">
                     <input type="text" value="Thanos">
-                    <img src="/images/googlemic_color_24dp.png" class="mic" alt="mic">
+                    <img src="images/googlemic_color_24dp.png" class="mic" alt="mic">
                     <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                 <div class="align">
                     <span></span>
                     <div class="box-img-user">
-                        <img src="/images/perfil.jpg" alt="">
+                        <img src="images/perfil.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                                 <div class="section">
                                     <div class="news-box">
                                         <div class="box-img">
-                                            <img src="/images/thanos-1.jpg" alt="">
+                                            <img src="images/thanos-1.jpg" alt="">
                                         </div>
                                         <div class="description">
                                             <h4>Thano, el villano de Avengers, llegó al buscador de Google y ycon su
@@ -77,7 +77,7 @@
                                     </div>
                                     <div class="news-box">
                                         <div class="box-img">
-                                            <img src="/images/thanos-2.jpg" alt="">
+                                            <img src="images/thanos-2.jpg" alt="">
                                         </div>
                                         <div class="description">
                                             <h4>Explicación a la paradoja de Thanos en Vengadores: Endgame</h4>
@@ -87,7 +87,7 @@
                                     </div>
                                     <div class="news-box">
                                         <div class="box-img">
-                                            <img src="/images/thanos-3.jpg" alt="">
+                                            <img src="images/thanos-3.jpg" alt="">
                                         </div>
                                         <div class="description">
                                             <h4>Revelan versión extendida de la última batalla contra...</h4>
@@ -196,7 +196,7 @@
                             </div>
                             <div class="video">
                                 <div class="box-img-video">
-                                    <img src="/images/video.jpg" alt="">
+                                    <img src="images/video.jpg" alt="">
                                     <div class="play">▶</div>
                                 </div>
                                 <div class="info">
@@ -361,10 +361,10 @@
                                 </svg>
                             </div>
                             <div class="gauntlet" id="gauntlet">
-                                <img src="/images/thanos_idle.png">
+                                <img src="images/thanos_idle.png">
                             </div>
                             <div class="img-t">
-                                <img src="/images/thanos-4.jpg">
+                                <img src="images/thanos-4.jpg">
                             </div>
                         </div>
                         <div class="description">
@@ -384,28 +384,28 @@
                             <div class="content">
                                 <div class="f">
                                     <div class="box-img">
-                                        <img src="/images/Avengers-Endgame.jpg">
+                                        <img src="images/Avengers-Endgame.jpg">
                                     </div>
                                     <a>Avengers: Endgame</a>
                                     <span>2019</span>
                                 </div>
                                 <div class="f">
                                     <div class="box-img">
-                                        <img src="/images/Avengers-Infinity-War.jpg">
+                                        <img src="images/Avengers-Infinity-War.jpg">
                                     </div>
                                     <a>Avengers: Infinity War</a>
                                     <span>2018</span>
                                 </div>
                                 <div class="f">
                                     <div class="box-img">
-                                        <img src="/images/Guardianes-de-la-galaxia.jpg">
+                                        <img src="images/Guardianes-de-la-galaxia.jpg">
                                     </div>
                                     <a>Guardianes de la galaxia</a>
                                     <span>2014</span>
                                 </div>
                                 <div class="f">
                                     <div class="box-img">
-                                        <img src="/images/Avengers-era-de-Ultrón.jpg">
+                                        <img src="images/Avengers-era-de-Ultrón.jpg">
                                     </div>
                                     <a>Avengers: era de Ultrón</a>
                                     <span>2015</span>
@@ -419,23 +419,23 @@
                             </div>
                             <div class="content">
                                 <div class="box-img">
-                                    <img src="/images/Iroman.jpg" alt="">
+                                    <img src="images/Iroman.jpg" alt="">
                                     <span>Iron Man</span>
                                 </div>
                                 <div class="box-img">
-                                    <img src="/images/Thor.jpg" alt="">
+                                    <img src="images/Thor.jpg" alt="">
                                     <span>Thor</span>
                                 </div>
                                 <div class="box-img">
-                                    <img src="/images/Hullk.jpg" alt="">
+                                    <img src="images/Hullk.jpg" alt="">
                                     <span>Bruce Banner</span>
                                 </div>
                                 <div class="box-img">
-                                    <img src="/images/Captain-Americas.jpg" alt="">
+                                    <img src="images/Captain-Americas.jpg" alt="">
                                     <span>Capitán América</span>
                                 </div>
                                 <div class="box-img">
-                                    <img src="/images/Spider-Man.jpg" alt="">
+                                    <img src="images/Spider-Man.jpg" alt="">
                                     <span>Spider‑Man</span>
                                 </div>
                             </div>
@@ -445,8 +445,8 @@
             </div>
         </div>
     </main>
-    <script src="/js/html2canvas.min.js"></script>
-    <script src="/js/app..js"></script>
+    <script src="js/html2canvas.min.js"></script>
+    <script src="js/app..js"></script>
 </body>
 
 </html>
